# gamification-impl/src/main/java/ch/heigvd/gamification/api/endpoints/EventsApiController.java
@@ -1,9 +1,12 @@
 package ch.heigvd.gamification.api.endpoints;
 
 
+import ch.heigvd.gamification.RFC3339DateFormat;
 import ch.heigvd.gamification.api.EventsApi;
 import ch.heigvd.gamification.api.model.User;
 import ch.heigvd.gamification.api.model.Event;
+import ch.heigvd.gamification.api.services.EventProcessorService;
+import ch.heigvd.gamification.api.services.EventProcessorServiceImpl;
 import ch.heigvd.gamification.entities.ApplicationEntity;
 import ch.heigvd.gamification.entities.EventEntity;
 import ch.heigvd.gamification.entities.UserEntity;
@@ -14,6 +17,7 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Controller;
+import org.springframework.stereotype.Service;
 import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.ResponseStatus;
@@ -22,7 +26,9 @@ import org.springframework.web.servlet.support.ServletUriComponentsBuilder;
 
 import javax.validation.Valid;
 import java.net.URI;
+import java.sql.Timestamp;
 import java.util.ArrayList;
+import java.util.Date;
 import java.util.List;
 import java.util.UUID;
 
@@ -32,43 +38,23 @@ public class EventsApiController implements EventsApi {
     @Autowired
     private ApplicationRepository applicationRepository;
 
-    public ResponseEntity<Void> createEvent(@ApiParam(value = "", required = true) @Valid @RequestBody Event event) {
-        EventEntity newEventEntity = toEventEntity(event);
+    @Autowired
+    private EventProcessorService eventProcessorService;
 
-        URI location = ServletUriComponentsBuilder
-                .fromCurrentRequest().path("/{id}")
-                .buildAndExpand(newEventEntity.getId()).toUri();
-
-        return ResponseEntity.created(location).build();
-    }
 
     @Override
-    @ResponseStatus(HttpStatus.CREATED)
-    public ResponseEntity<Void> createEvent(UUID X_API_KEY, @Valid Event event) {
-        EventEntity newEventEntity = toEventEntity(event);
+    public ResponseEntity<Void> processEvent(UUID X_API_KEY, @Valid Event event) {
 
-        URI location = ServletUriComponentsBuilder
-                .fromCurrentRequest().path("/{id}")
-                .buildAndExpand(newEventEntity.getId()).toUri();
+        // check for event type
+        String username = event.getEventparams().getUsername();
+        Date date = new Date();
+        String dateFormated = RFC3339DateFormat.getDateTimeInstance().format(date);
+        event.setTimestamp(dateFormated);
 
-        return ResponseEntity.created(location).build();
+        System.out.println("receive event at " + event.getTimestamp());
+
+        eventProcessorService.addBadgetoUser(X_API_KEY.toString(),username);
+
+        return new ResponseEntity<>(HttpStatus.ACCEPTED);
     }
-
-    private EventEntity toEventEntity(Event event) {
-        EventEntity entity = new EventEntity();
-        entity.setId(event.getId());
-        entity.setName(event.getName());
-
-        return entity;
-    }
-
-    private Event toEvent(EventEntity entity) {
-        Event event = new Event();
-        //need to controle type into spec yaml
-        //user.setId(entity.getId());
-        event.setName(entity.getName());
-
-        return event;
-    }
-
 }
